# ragcipe

./: .gitignore  README.md  generate_git_history.sh  sample_recipes.json
backend/: .env.example  download_1000.py  pyproject.toml  requirements.txt  test_tavily.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: graph.py
backend/app/agents/nodes/: __init__.py  image_analysis.py  input_parser.py  recipe_chat.py  recipe_generator.py  recipe_retrieval.py  substitute_agent.py  web_search.py
backend/app/agents/tools/: retriever_tool.py  search_tool.py
backend/app/api/: routes.py
backend/app/models/: schemas.py  state.py
backend/app/services/: database.py  ingestion.py  vectorstore.py
backend/data/: sample_recipes.json
frontend/: eslint.config.js  generate-favicon.cjs  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/Camera/: CameraCapture.css  CameraCapture.jsx  IngredientList.css  IngredientList.jsx
frontend/src/components/Layout/: Header.css  Header.jsx  Layout.css  Layout.jsx  Sidebar.css  Sidebar.jsx
frontend/src/components/Preferences/: AllergySelector.jsx  CuisineSelector.jsx  DietaryPreferences.css  DietaryPreferences.jsx  NutritionGoals.jsx  TasteProfile.jsx
frontend/src/components/common/: Badge.css  Badge.jsx  Button.css  Button.jsx  LoadingSpinner.css  LoadingSpinner.jsx
frontend/src/hooks/: useApi.js  useCamera.js
frontend/src/pages/: SavedRecipesPage.jsx
frontend/src/utils/: api.js  session.js
